objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Community Involvement</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Decision %E2%80%93 Approved</fullName>
        </values>
        <values>
            <fullName>Decision %E2%80%93 Denial</fullName>
        </values>
        <values>
            <fullName>Decision %E2%80%93 Follow Up</fullName>
        </values>
        <values>
            <fullName>Delivered</fullName>
        </values>
        <values>
            <fullName>Ready for Review</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Default</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>BD - Cancelled</fullName>
        </values>
        <values>
            <fullName>BD - Completed</fullName>
        </values>
        <values>
            <fullName>BD - Planning</fullName>
        </values>
        <values>
            <fullName>BD - Prospect</fullName>
        </values>
        <values>
            <fullName>BL - Application%2FPricing</fullName>
        </values>
        <values>
            <fullName>BL - Closed</fullName>
        </values>
        <values>
            <fullName>BL - Closing Preparation</fullName>
        </values>
        <values>
            <fullName>BL - Declined</fullName>
        </values>
        <values>
            <fullName>BL - File In Process</fullName>
        </values>
        <values>
            <fullName>BL - LM 1</fullName>
        </values>
        <values>
            <fullName>BL - LM 2</fullName>
        </values>
        <values>
            <fullName>BL - LM 3</fullName>
        </values>
        <values>
            <fullName>BL - Lost</fullName>
        </values>
        <values>
            <fullName>BL - On Hold</fullName>
        </values>
        <values>
            <fullName>BL - Quoted</fullName>
        </values>
        <values>
            <fullName>BL - Shop</fullName>
        </values>
        <values>
            <fullName>BL - Submitted to Underwriting</fullName>
        </values>
        <values>
            <fullName>BL - Withdrawn</fullName>
        </values>
        <values>
            <fullName>BR - Application%2FProposal</fullName>
        </values>
        <values>
            <fullName>BR - Approved%2FPresentation</fullName>
        </values>
        <values>
            <fullName>BR - Contacted %28waiting on client%29</fullName>
        </values>
        <values>
            <fullName>BR - Deposit Funded</fullName>
        </values>
        <values>
            <fullName>BR - Deposit Lost</fullName>
        </values>
        <values>
            <fullName>BR - LM 1</fullName>
        </values>
        <values>
            <fullName>BR - LM 2</fullName>
        </values>
        <values>
            <fullName>BR - LM 3</fullName>
        </values>
        <values>
            <fullName>BR - Loan Funded</fullName>
        </values>
        <values>
            <fullName>BR - Loan Lost</fullName>
        </values>
        <values>
            <fullName>BR - Meeting Established</fullName>
        </values>
        <values>
            <fullName>BR - Negotiating%2FFollow Up</fullName>
        </values>
        <values>
            <fullName>BR - Onboarding</fullName>
        </values>
        <values>
            <fullName>BR - Withdrawn</fullName>
        </values>
        <values>
            <fullName>FSC - Application</fullName>
        </values>
        <values>
            <fullName>FSC - Complete</fullName>
        </values>
        <values>
            <fullName>FSC - Declined</fullName>
        </values>
        <values>
            <fullName>FSC - Docs</fullName>
        </values>
        <values>
            <fullName>FSC - LM 1</fullName>
        </values>
        <values>
            <fullName>FSC - LM 2</fullName>
        </values>
        <values>
            <fullName>FSC - LM 3</fullName>
        </values>
        <values>
            <fullName>FSC - Member Decline</fullName>
        </values>
        <values>
            <fullName>FSC - Pre Qual</fullName>
        </values>
        <values>
            <fullName>FSC - Prospect</fullName>
        </values>
        <values>
            <fullName>FSC - Shop</fullName>
        </values>
        <values>
            <fullName>MRA - Application</fullName>
        </values>
        <values>
            <fullName>MRA - Complete</fullName>
        </values>
        <values>
            <fullName>MRA - Contacted</fullName>
        </values>
        <values>
            <fullName>MRA - Decline</fullName>
        </values>
        <values>
            <fullName>MRA - Docs Sent</fullName>
        </values>
        <values>
            <fullName>MRA - LM 1</fullName>
        </values>
        <values>
            <fullName>MRA - LM 2</fullName>
        </values>
        <values>
            <fullName>MRA - LM 3</fullName>
        </values>
        <values>
            <fullName>MRA - Member Decline</fullName>
        </values>
        <values>
            <fullName>MRA - Mortgage%2FHELOC</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deposit Products</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Contacting Applicant</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Member Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>FSC Loan Process</fullName>
        <description>This is used only for FSC department</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approval Pending</fullName>
        </values>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>CLP</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Contacting Applicant</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Member Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Pending Decision Mbr</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HELOC</fullName>
        <description>HELOC product sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Clear to Close</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Contacting Applicant</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Docs Signed</fullName>
        </values>
        <values>
            <fullName>Member Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Orders</fullName>
        </values>
        <values>
            <fullName>Pending Decision Mbr</fullName>
        </values>
        <values>
            <fullName>Verifications</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Online Account Opening</fullName>
        <description>Sales Process Opening Online Account Opening</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Complete</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Documents%2FSigning</fullName>
        </values>
        <values>
            <fullName>Funding</fullName>
        </values>
        <values>
            <fullName>Member Rejected</fullName>
        </values>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>Under Review</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Prospect</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
        </values>
        <values>
            <fullName>No Further Action</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Test Process</fullName>
        <description>Test process</description>
        <isActive>false</isActive>
        <values>
            <fullName>BD - Cancelled</fullName>
        </values>
        <values>
            <fullName>BD - Completed</fullName>
        </values>
        <values>
            <fullName>BD - Planning</fullName>
        </values>
        <values>
            <fullName>BD - Prospect</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AOEligibilityResponse__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The membership eligibility response provided by the member or prospective member during the account opening process.</inlineHelpText>
        <label>Eligibility Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOError__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Any error that occurs while processing the account opening data will be shown here.</inlineHelpText>
        <label>AO Error</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AOFormName__c</fullName>
        <description>The latest form name for the associated account opening job (Avoka/Temenos).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOFormPurpose__c</fullName>
        <label>Form Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Add Role</fullName>
                </value>
                <value>
                    <fullName>Open Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AOFormUrl__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The URL to the current step of the application.</inlineHelpText>
        <label>Form URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AOResponsibleParty__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The guardian that is responsible for a youth account.</inlineHelpText>
        <label>Responsible Party</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (AO Responsible Party)</relationshipLabel>
        <relationshipName>YouthApplications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AOReviewRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AOSystem_Error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>System Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AdverseActionLetter__c</fullName>
        <description>Checked if the agent has sent a letter for the loan applicant when a loan application is declined</description>
        <inlineHelpText>Check this box to indicate that the Adverse Action Letter has been sent.</inlineHelpText>
        <label>Adverse Action Letter</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Lost_Reason__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Budget__c</fullName>
        <label>Annual Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Committed__c</fullName>
        <label>Annual Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>App_ID__c</fullName>
        <description>The loan application ID from the Loan Origination System.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>App ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApplicationId__c</fullName>
        <description>Transaction ID associated with an online account opening transaction.  This is a UUID.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Application ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applied_Promo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box is to be checked when the VSC Agent applies a promo to the account for reporting purposes.</description>
        <label>Applied Promo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Auto</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaJob__c</fullName>
        <description>The Avoka Job Reference Code that the opportunity is associated with. This is used to identify if an open opportunity is already open for a job when the AvokaDeliveryProcessor receives new information.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Avoka Job</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvokaTrackingCode__c</fullName>
        <description>The latest tracking code for the associated the account opening job (Avoka/Temenos).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <label>Campaign Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Experian</fullName>
                </value>
                <value>
                    <fullName>HARV</fullName>
                </value>
                <value>
                    <fullName>Home Loan Report</fullName>
                </value>
                <value>
                    <fullName>IL Onboarding</fullName>
                </value>
                <value>
                    <fullName>MRA-Runoff</fullName>
                </value>
                <value>
                    <fullName>OSC Lead</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
                <value>
                    <fullName>Pre-approved HELOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_6_month_Period__c</fullName>
        <description>For Close Date, show the year and whether in the 1st or 2nd 6-month period, Jan-Jun or Jul-Dec.</description>
        <formula>/*
TEXT( YEAR( CloseDate ))
&amp; &quot;-&quot; &amp;
IF( MONTH( CloseDate ) &lt;= 6 ,
&quot;part 1&quot; ,
&quot;part 2&quot; )
*/


IF( YEAR( CloseDate ) = YEAR( TODAY())
&amp;&amp; 
MONTH( CloseDate ) &lt;= 6, &quot;Closed in 1st half&quot;,
&quot;Closed in 2nd half&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed 6-month Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_In_Current_6_months__c</fullName>
        <description>Show TRUE if the Close Date is in the current 6-month period, Jan1-Jun30 and Jul1-Dec31, and FALSE o.w.</description>
        <formula>IF( YEAR( CloseDate ) = YEAR( TODAY())
&amp;&amp;
(  ( MONTH( TODAY()) &lt;= 6 &amp;&amp; MONTH( CloseDate ) &lt;= 6 )
|| ( MONTH( TODAY()) &gt;= 7 &amp;&amp; MONTH( CloseDate ) &gt;= 7 )) ,
TRUE ,

FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed In Current 6 months</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contact First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Month__c</fullName>
        <label>Contract Length Month</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Length_Years__c</fullName>
        <label>Contract Length Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Score__c</fullName>
        <label>Credit Score</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DTI__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DTI</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_First_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date First Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_funded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date funded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaysUntilClose__c</fullName>
        <description>The number of days between today and the indicated close date.  For closed dates in the past, this will return zero.</description>
        <formula>MAX(ROUND(CloseDate - TODAY(), 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Until Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disability_Insurance__c</fullName>
        <label>Disability Insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carry</fullName>
                </value>
                <value>
                    <fullName>Waive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Involved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Employee Involved</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Affiliation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event Affiliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Location__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Event Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fax Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Financial_Institution__c</fullName>
        <label>Financial Institution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Bank of Commerce</fullName>
                </value>
                <value>
                    <fullName>Bank of Idaho</fullName>
                </value>
                <value>
                    <fullName>Bank of the Cascades</fullName>
                </value>
                <value>
                    <fullName>Capital Educators FCU</fullName>
                </value>
                <value>
                    <fullName>Citizens Community</fullName>
                </value>
                <value>
                    <fullName>DL Evans</fullName>
                </value>
                <value>
                    <fullName>Farmers Bank</fullName>
                </value>
                <value>
                    <fullName>First Federal</fullName>
                </value>
                <value>
                    <fullName>First Interstate Bank (FIB)</fullName>
                </value>
                <value>
                    <fullName>ISU Credit Union</fullName>
                </value>
                <value>
                    <fullName>JP Morgan Chase</fullName>
                </value>
                <value>
                    <fullName>Key Bank</fullName>
                </value>
                <value>
                    <fullName>Magic Valley/Columbia Bank</fullName>
                </value>
                <value>
                    <fullName>Mountain America Credit Union</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Pioneer Federal CU</fullName>
                </value>
                <value>
                    <fullName>Sunwest Bank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Washington Trust</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Zions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Payment_Amount__c</fullName>
        <description>First Payment Amount</description>
        <label>First Payment Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Payment_Date__c</fullName>
        <description>First Payment Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>First Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GAP_Amount__c</fullName>
        <label>GAP Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ICCU_Employee_Involvement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ICCU Employee Involvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICCU_Recognition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ICCU Recognition</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if this Opportunity is an incentive.</description>
        <inlineHelpText>Check this box if this Opportunity is an incentive.</inlineHelpText>
        <label>Incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Business Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Joint_Credit_Score__c</fullName>
        <label>Joint Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Joint_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Joint_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Joint__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Joint</label>
        <length>104</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Contacted__c</fullName>
        <description>Date when Agent last contacted member.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Contacted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leads__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leads</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeftMessageFourth__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this mark if you tried to contact prospect and call has not been answered and you left voice message for the fourth time</description>
        <label>LeftMessageFourth</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeftMessageOne__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this mark if you tried to contact prospect and call has not been answered and you left voice message for the first time</description>
        <label>LeftMessageOne</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeftMessageThree__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this mark if you tried to contact prospect and call has not been answered and you left voice message for the third time</description>
        <label>LeftMessageThree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeftMessageTwo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this mark if you tried to contact prospect and call has not been answered and you left voice message for the second time</description>
        <label>LeftMessageTwo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_insurance__c</fullName>
        <label>Life insurance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carry</fullName>
                </value>
                <value>
                    <fullName>Waive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <formula>CASE( Product_Type__c ,

&quot;Loan&quot; , Amount ,

NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Incentive_Amount__c</fullName>
        <description>Used to calculate opportunity incentives for non-mortgage loans.</description>
        <formula>IF(OR(ISPICKVAL(Product__c, &apos;Auto&apos;),
ISPICKVAL(Product__c, &apos;Visa&apos;), 
ISPICKVAL(Product__c, &apos;Visa Increase&apos;),
ISPICKVAL(Product__c, &apos;Motorcycle&apos;),
ISPICKVAL(Product__c, &apos;Signature Loan&apos;),
ISPICKVAL(Product__c, &apos;HELOC&apos;),
ISPICKVAL(Product__c, &apos;GAP Volume&apos;),
ISPICKVAL(Product__c, &apos;RV&apos;),
ISPICKVAL(Product__c, &apos;Small RV&apos;),
ISPICKVAL(Product__c, &apos;MRA Checking Incentive&apos;),
ISPICKVAL(Product__c, &apos;MRA GAP Incentive&apos;),
ISPICKVAL(Product__c, &apos;MRA Visa Incentive&apos;),
ISPICKVAL(Product__c, &apos;MRA Loan Count Incentive&apos;),
ISPICKVAL(Product__c, &apos;MRA HELOC Incentive&apos;)
),
Amount, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Loan Incentive Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loan_to_Value__c</fullName>
        <label>Loan to Value</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lost_Explanation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lost Explanation</label>
        <type>TextArea</type>
    </fields>
</CustomObject>